# Swarm_Module

./: README.md  citation.txt
Swarm_Module_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Swarm_Module_ws/install/dynamixel_motor/lib/dynamixel_motor/: MovementControl
Swarm_Module_ws/install/dynamixel_motor/share/dynamixel_motor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  run_module.launch.xml
Swarm_Module_ws/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.sh
Swarm_Module_ws/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.sh  package.sh
Swarm_Module_ws/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake
Swarm_Module_ws/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/srv/: Movement.idl  SetBending.idl  SetBending.json  SetBending.srv  (+5 more)
Swarm_Module_ws/install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.sh  package.sh
Swarm_Module_ws/log/: latest_build
Swarm_Module_ws/src/dynamixel_motor/: package.xml  setup.cfg  setup.py
Swarm_Module_ws/src/dynamixel_motor/dynamixel_motor/: MovementControl.py
Swarm_Module_ws/src/dynamixel_sdk_custom_interfaces/: CMakeLists.txt
Swarm_Module_ws/src/dynamixel_sdk_custom_interfaces/srv/: Movement.srv  SetExtension.srv
Swarm_Module_ws/src/dynamixel_sdk_examples/include/: read_write_node.hpp
Swarm_Module_ws/src/dynamixel_sdk_examples/src/: read_write_node.cpp
(+70 files in other folders)
