<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_motor</name>
  <version>0.0.0</version>
  <description>This package controls the different movements of the robot module with 8 motors</description>
  <maintainer email="haodong0518@gmail.com">haodong</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>std_srvs</exec_depend>

  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>dynamixel_sdk_examples</exec_depend>
  <exec_depend>dynamixel_sdk_custom_interfaces</exec_depend>
  <exec_depend>ros2launch</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
